# ChoirCli

./: .gitignore  CLAUDE.md  Cargo.toml
docs/superpowers/plans/: 2026-05-18-choircli-poc-terminal.md  2026-05-18-copy-paste.md  2026-05-19-run3-sidebar-agents.md  2026-05-19-run4-session-resume.md
docs/superpowers/specs/: 2026-05-18-choircli-poc-terminal-design.md  2026-05-18-copy-paste-design.md  2026-05-19-run3-sidebar-agents-design.md  2026-05-19-run4-session-resume-design.md
src/: main.rs
src/agents/: mod.rs
src/db/: mod.rs
src/terminal/: mod.rs  pty.rs  screen.rs
src/ui/: app.rs  mod.rs  sidebar.rs  terminal_widget.rs
