[package]
name = "choircli"
version = "0.1.0"
edition = "2021"

[dependencies]
iced        = { version = "0.13", features = ["canvas", "advanced", "tokio"] }
portable-pty = "0.8"
vte         = "0.13"
rusqlite    = { version = "0.31", features = ["bundled"] }
rfd         = "0.15"
uuid        = { version = "1", features = ["v4"] }
chrono      = "0.4"
dirs        = "5"
